Change style sheet: apply green color to td.pass a:link

--- a/styles/style.css
+++ b/styles/style.css
@@ -47,6 +47,10 @@ table td.pass
 	color: green;
 	text-align: center;
 }
+table td.pass a:link
+{
+	color: green;
+}
 table td.fail
 {
 	color: red;
