Adding code for a 'show only failing tests' checkbox

--- a/styles/style.css
+++ b/styles/style.css
@@ -104,3 +104,7 @@ table tbody tr:hover td
 	margin: 12px;
 	font-size: 12px;
 }
+
+.show_only_fail tr.allpass, .show_only_fail tr.mixed{
+	display: none;
+}
